[workspace]
members = ["benchmarks", "cli", "console"]

[workspace.dependencies]
datafusion = { version = "52.0.0", default-features = false }
datafusion-proto = { version = "52.0.0" }

[package]
name = "datafusion-distributed"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42" }
datafusion = { workspace = true, features = [
  "parquet",
  "sql",
  "unicode_expressions",
  "datetime_expressions",
] }
datafusion-proto = { workspace = true }
arrow-flight = "57.1.0"
arrow-select = "57.1.0"
arrow-ipc = { version = "57.1.0", features = ["zstd"] }
async-trait = "0.1.89"
tokio = { version = "1.48", features = ["full"] }
tonic = { version = "0.14.1", features = ["transport"] }
tower = "0.5.2"
http = "1.3.1"
itertools = "0.14.0"
futures = "0.3.31"
url = "2.5.7"
uuid = "1.19"
delegate = "0.13.4"
dashmap = "6.0.1"
prost = "0.14.1"
rand = "0.9"
object_store = "0.12.4"
bytes = "1.11"
pin-project = "1.1.10"
tokio-stream = "0.1.17"
tokio-util = "0.7"
moka = { version = "0.12", features = ["sync", "future"] }
sketches-ddsketch = "0.3.0"

# integration_tests deps
insta = { version = "1.46.0", features = ["filters"], optional = true }
tpchgen = { git = "https://github.com/clflushopt/tpchgen-rs", rev = "e83365a5a9101906eb9f78c5607b83bc59849acf", optional = true }
tpchgen-arrow = { git = "https://github.com/clflushopt/tpchgen-rs", rev = "e83365a5a9101906eb9f78c5607b83bc59849acf", optional = true }
parquet = { version = "57.1.0", optional = true }
arrow = { version = "57.1.0", optional = true }
hyper-util = { version = "0.1.16", optional = true }
pretty_assertions = { version = "1.4", optional = true }
reqwest = { version = "0.12", optional = true }
zip = { version = "6.0", optional = true }
tonic-prost = "0.14.2"

[features]
avro = ["datafusion/avro"]
integration = [
  "insta",
  "tpchgen",
  "tpchgen-arrow",
  "parquet",
  "arrow",
  "hyper-util",
  "pretty_assertions",
  "reqwest",
  "zip",
]

tpch = ["integration"]
tpcds = ["integration"]
clickbench = ["integration"]

[dev-dependencies]
structopt = "0.3"
insta = { version = "1.46.0", features = ["filters"] }
tpchgen = { git = "https://github.com/clflushopt/tpchgen-rs", rev = "e83365a5a9101906eb9f78c5607b83bc59849acf" }
tpchgen-arrow = { git = "https://github.com/clflushopt/tpchgen-rs", rev = "e83365a5a9101906eb9f78c5607b83bc59849acf" }
parquet = "57.1.0"
arrow = "57.1.0"
tokio-stream = "0.1.17"
hyper-util = "0.1.16"
pretty_assertions = "1.4"
reqwest = "0.12"
zip = "6.0"
test-case = "3.3.1"

# @NetworkBoundaryStrategy: custom execution plan flag
[[example]]
name = "custom_execution_plan"
required-features = ["integration"]
